Fixed more color contrast issues

--- a/src/styles/components/_Header.scss
+++ b/src/styles/components/_Header.scss
@@ -69,7 +69,7 @@
           font-weight: 800;
           margin-right: 20px;
 
-          &.flagged { color: $color-red; }
+          &.flagged { color: $color-red-dark; }
         }
 
         &-label {
